--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^17.0.21",
     "@types/react": "17.0.39",
+    "@types/react-modal": "^3.13.1",
     "@types/styled-components": "^5.1.24",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
