--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "axios": "^0.26.1",
     "next": "12.1.0",
+    "rc-upload": "^4.3.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-hot-toast": "^2.2.0",
     "react-modal": "^3.14.4",
     "styled-components": "^5.3.3"
   },
